# WhisperRT-CPU

./: .gitignore  README.txt  build_faster_whisper_quant_report.py  faster_whisper_quant_report_executed.ipynb  notebook_test_run.ipynb  pruning_experiments.ipynb  pyproject.toml  run_faster_whisper_quant_suite.py
src/: audio_datasets.py  baseline_models.py  metrics.py  quantized_models.py  test_pruning_matricies.py  utils.py
traning/: TurboMTP.py  distill_large_v3_turbo_a100.py  train_multitoken_prediction.py
traning/.cache/fontconfig/: f5c30864000463a7199a6b11a6b7be90-le64.cache-9
traning/.cache/matplotlib/: fontlist-v330.json
