[project]
name = "whisper-cpu-infer"
version = "0.1.0"
description = "Whisper inference optimization on CPU"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch",
    "torchaudio",
    "openai-whisper",
    "numpy",
    "soundfile",
    "tqdm",
]

[dependency-groups]
dev = [
    "ruff",
    "pyrefly",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
project-includes = ["src", "tests"]
python-version = "3.11"