[project]
name = "whisper-cpu-infer"
version = "0.1.0"
description = "Whisper inference optimization on CPU"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "openai-whisper",
    "numpy",
    "soundfile",
    "tqdm",
    "jiwer",
    "datasets",
    "transformers",
    "torchcodec",
    "matplotlib",
    "torchvision==0.20.1"
]

[dependency-groups]
dev = [
    "ruff",
    "pyrefly",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
project-includes = ["src", "tests"]
python-version = "3.11"

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
