[project]
name = "whisper-cpu-infer"
version = "0.1.0"
description = "Whisper inference optimization on CPU"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "torchcodec==0.10.0",
    "transformers==5.0.0",
    "datasets==4.8.3",
    "numpy==2.4.3",
    "tqdm==4.67.3",
    "openai-whisper==20250625",
    "jiwer==4.0.0",
    "soundfile==0.13.1",
    "matplotlib==3.10.8",
]

[dependency-groups]
dev = [
    "ruff",
    "pyrefly",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
project-includes = ["src", "tests"]
python-version = "3.11"

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
